my-jitsi/030-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-6726
          imagePullPolicy: IfNotPresent
        - name: prosody
          image: jitsi/prosody:stable-6726
          imagePullPolicy: IfNotPresent
        - name: web
          image: jitsi/web:stable-6726
          imagePullPolicy: IfNotPresent
        - name: jvb
          image: jitsi/jvb:stable-6726
          imagePullPolicy: IfNotPresent
        - name: jigasi
          image: jitsi/jigasi:stable-6726
          imagePullPolicy: IfNotPresent
      serviceAccountName: jitsi
