my-jitsi/041-ingress.yaml
###################################################
# Ingress
####################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - solwinptp-evl-el7-wms-tmp-debug-tts.c.ptin.corppt.com
    secretName: tls-jitsi
  rules:
  - host: solwinptp-evl-el7-wms-tmp-debug-tts.c.ptin.corppt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
